chore: migrate to jakartaee 11