@@ -4,9 +4,11 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.eclipse.cargotracker.Deployments.*;
 import static org.eclipse.cargotracker.domain.model.handling.HandlingEvent.Type.LOAD;
 
+import static java.util.List.*;
+
 import jakarta.inject.Inject;
 import jakarta.persistence.EntityManager;
-import jakarta.persistence.PersistenceContext;
+import jakarta.persistence.EntityManagerFactory;
 import jakarta.transaction.Status;
 import jakarta.transaction.UserTransaction;
 
@@ -29,7 +31,6 @@ import org.jboss.shrinkwrap.api.spec.WebArchive;
 import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
 
-import java.lang.reflect.Field;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.Arrays;
@@ -51,7 +52,9 @@ public class CargoRepositoryTest {
 
     @Inject private VoyageRepository voyageRepository;
 
-    @PersistenceContext private EntityManager entityManager;
+    @Inject private EntityManager entityManager;
+
+    @Inject private EntityManagerFactory emf;
 
     @Deployment
     public static WebArchive createDeployment() {
@@ -86,16 +89,26 @@ public class CargoRepositoryTest {
     @BeforeEach
     public void setup() {}
 
-    public void startTransaction() throws Exception {
+    private void startTransaction() throws Exception {
         utx.begin();
         entityManager.joinTransaction();
     }
 
-    public void commitTransaction() throws Exception {
+    private void commitTransaction() throws Exception {
         LOGGER.log(Level.INFO, "UserTransaction status is: {0}", utx.getStatus());
         if (utx.getStatus() == Status.STATUS_ACTIVE) {
             utx.commit();
         }
+    }
+
+    private void runInTx(Runnable runnable) throws Exception {
+        startTransaction();
+        try {
+            runnable.run();
+        } catch (Exception e) {
+            utx.rollback();
+        }
+        commitTransaction();
     }
 
     @Test
@@ -153,7 +166,7 @@ public class CargoRepositoryTest {
 
         HandlingEvent secondEvent = events.get(1);
 
-        Voyage hongkongTonNewYork =
+        Voyage hongkongToNewYork =
                 new Voyage.Builder(new VoyageNumber("0100S"), SampleLocations.HONGKONG)
                         .addMovement(
                                 SampleLocations.HANGZOU, LocalDateTime.now(), LocalDateTime.now())
@@ -166,7 +179,7 @@ public class CargoRepositoryTest {
                         .build();
 
         assertHandlingEvent(
-                cargo, secondEvent, LOAD, SampleLocations.HONGKONG, 150, 110, hongkongTonNewYork);
+                cargo, secondEvent, LOAD, SampleLocations.HONGKONG, 150, 110, hongkongToNewYork);
 
         List<Leg> legs = cargo.getItinerary().legs();
         assertThat(legs).hasSize(3);
@@ -214,130 +227,141 @@ public class CargoRepositoryTest {
     @Test
     @Order(6)
     public void testSave() throws Exception {
-        startTransaction();
-        TrackingId trackingId = new TrackingId("AAA");
-        Location origin = locationRepository.find(SampleLocations.DALLAS.getUnLocode());
-        Location destination = locationRepository.find(SampleLocations.HELSINKI.getUnLocode());
+        runInTx(
+                () -> {
+                    TrackingId trackingId = new TrackingId("AAA");
+                    Location origin = locationRepository.find(SampleLocations.DALLAS.getUnLocode());
+                    Location destination =
+                            locationRepository.find(SampleLocations.HELSINKI.getUnLocode());
 
-        Cargo cargo =
-                new Cargo(trackingId, new RouteSpecification(origin, destination, LocalDate.now()));
-        cargoRepository.store(cargo);
+                    Cargo cargo =
+                            new Cargo(
+                                    trackingId,
+                                    new RouteSpecification(origin, destination, LocalDate.now()));
+                    cargoRepository.store(cargo);
 
-        cargo.assignToRoute(
-                new Itinerary(
-                        Arrays.asList(
-                                new Leg(
-                                        voyageRepository.find(new VoyageNumber("0300A")),
-                                        locationRepository.find(
-                                                SampleLocations.DALLAS.getUnLocode()),
-                                        locationRepository.find(
-                                                SampleLocations.HELSINKI.getUnLocode()),
-                                        LocalDateTime.now(),
-                                        LocalDateTime.now()))));
+                    cargo.assignToRoute(
+                            new Itinerary(
+                                    List.of(
+                                            new org.eclipse.cargotracker.domain.model.cargo.Leg(
+                                                    voyageRepository.find(
+                                                            new org.eclipse.cargotracker.domain
+                                                                    .model.voyage.VoyageNumber(
+                                                                    "0300A")),
+                                                    locationRepository.find(
+                                                            org.eclipse.cargotracker.domain.model
+                                                                    .location.SampleLocations.DALLAS
+                                                                    .getUnLocode()),
+                                                    locationRepository.find(
+                                                            org.eclipse.cargotracker.domain.model
+                                                                    .location.SampleLocations
+                                                                    .HELSINKI
+                                                                    .getUnLocode()),
+                                                    java.time.LocalDateTime.now(),
+                                                    java.time.LocalDateTime.now()))));
 
-        this.entityManager.flush();
-        commitTransaction();
+                    this.entityManager.flush();
 
-        // verify in new tx
-        startTransaction();
+                    var result =
+                            this.entityManager
+                                    .createQuery(
+                                            "select c from Cargo c where c.trackingId=:trackingId",
+                                            Cargo.class)
+                                    .setParameter("trackingId", trackingId)
+                                    .getSingleResult();
 
-        var result =
-                this.entityManager
-                        .createQuery(
-                                "select c from Cargo c where c.trackingId=:trackingId", Cargo.class)
-                        .setParameter("trackingId", trackingId)
-                        .getSingleResult();
-
-        assertThat(result.getTrackingId()).isEqualTo(trackingId);
-        assertThat(result.getRouteSpecification().origin()).isEqualTo(origin);
-        assertThat(result.getRouteSpecification().destination()).isEqualTo(destination);
-        assertThat(result.getItinerary().legs()).hasSize(1);
-        commitTransaction();
+                    assertThat(result.getTrackingId()).isEqualTo(trackingId);
+                    assertThat(result.getRouteSpecification().origin()).isEqualTo(origin);
+                    assertThat(result.getRouteSpecification().destination()).isEqualTo(destination);
+                    assertThat(result.getItinerary().legs()).hasSize(1);
+                });
     }
 
     @Test
     @Order(7)
     public void testSpecifyNewRoute() throws Exception {
         LOGGER.log(Level.INFO, "run test :: testSpecifyNewRoute");
-        startTransaction();
         var trackingId = new TrackingId("AAA");
-        Cargo cargo = cargoRepository.find(trackingId);
-        LOGGER.log(Level.INFO, "retrieved cargo: {0}", cargo.toString(true));
-        assertThat(cargo).isNotNull();
+        runInTx(
+                () -> {
+                    Cargo cargo = cargoRepository.find(trackingId);
+                    LOGGER.log(Level.INFO, "retrieved cargo: {0}", cargo.toString(true));
+                    assertThat(cargo).isNotNull();
 
-        Location origin = locationRepository.find(SampleLocations.NEWYORK.getUnLocode());
-        Location destination = locationRepository.find(SampleLocations.HELSINKI.getUnLocode());
+                    Location origin =
+                            locationRepository.find(SampleLocations.NEWYORK.getUnLocode());
+                    Location destination =
+                            locationRepository.find(SampleLocations.HELSINKI.getUnLocode());
 
-        cargo.specifyNewRoute(new RouteSpecification(origin, destination, LocalDate.now()));
+                    cargo.specifyNewRoute(
+                            new RouteSpecification(origin, destination, LocalDate.now()));
 
-        cargoRepository.store(cargo);
-        LOGGER.log(Level.INFO, "saved cargo: {0}", cargo.toString(true));
-        commitTransaction();
+                    cargoRepository.store(cargo);
+                    LOGGER.log(Level.INFO, "saved cargo: {0}", cargo.toString(true));
 
-        // verify in the new tx
-        LOGGER.log(Level.INFO, "run test :: verify cargo state");
-        startTransaction();
-        var result =
-                this.entityManager
-                        .createQuery(
-                                "select c from Cargo c where c.trackingId=:trackingId", Cargo.class)
-                        .setParameter("trackingId", trackingId)
-                        .getSingleResult();
-        LOGGER.log(
-                Level.INFO,
-                "query cargo by tracking id: {0}, \n result: {1}",
-                new Object[] {trackingId, result.toString(true)});
-        assertThat(result.getTrackingId()).isEqualTo(trackingId);
-        assertThat(result.getRouteSpecification().origin()).isEqualTo(origin);
-        assertThat(result.getRouteSpecification().destination()).isEqualTo(destination);
-        assertThat(result.getItinerary().legs()).hasSize(1);
+                    this.entityManager.flush();
 
-        commitTransaction();
+                    // verify in the new tx
+                    LOGGER.log(Level.INFO, "run test :: verify cargo state");
+                    var result =
+                            this.entityManager
+                                    .createQuery(
+                                            "select c from Cargo c where c.trackingId=:trackingId",
+                                            Cargo.class)
+                                    .setParameter("trackingId", trackingId)
+                                    .getSingleResult();
+                    LOGGER.log(
+                            Level.INFO,
+                            "query cargo by tracking id: {0}, \n result: {1}",
+                            new Object[] {trackingId, result.toString(true)});
+                    assertThat(result.getTrackingId()).isEqualTo(trackingId);
+                    assertThat(result.getRouteSpecification().origin()).isEqualTo(origin);
+                    assertThat(result.getRouteSpecification().destination()).isEqualTo(destination);
+                    assertThat(result.getItinerary().legs()).hasSize(1);
+                });
     }
 
     @Test
     @Order(8)
     public void testReplaceItinerary() throws Exception {
-        startTransaction();
-        var trackingId = new TrackingId("AAA");
-        Cargo cargo = cargoRepository.find(trackingId);
-        Long cargoId = getLongId(cargo);
-        assertLegCount(trackingId, 1);
-        // assertThat(jdbcTemplate.queryForObject("select count(*) from Leg where cargo_id = ?", new
-        // Object[]{cargoId}, Integer.class).intValue()).isEqualTo(3);
+        runInTx(
+                () -> {
+                    var trackingId = new TrackingId("AAA");
+                    Cargo cargo = cargoRepository.find(trackingId);
+                    assertLegCount(trackingId, 1);
 
-        Itinerary newItinerary =
-                new Itinerary(
-                        Arrays.asList(
-                                new Leg(
-                                        SampleVoyages.NEW_YORK_TO_DALLAS,
-                                        locationRepository.find(
-                                                SampleLocations.NEWYORK.getUnLocode()),
-                                        locationRepository.find(
-                                                SampleLocations.DALLAS.getUnLocode()),
-                                        LocalDateTime.now(),
-                                        LocalDateTime.now()),
-                                new Leg(
-                                        SampleVoyages.DALLAS_TO_HELSINKI,
-                                        locationRepository.find(
-                                                SampleLocations.DALLAS.getUnLocode()),
-                                        locationRepository.find(
-                                                SampleLocations.HELSINKI.getUnLocode()),
-                                        LocalDateTime.now(),
-                                        LocalDateTime.now())));
+                    Itinerary newItinerary =
+                            new Itinerary(
+                                    Arrays.asList(
+                                            new Leg(
+                                                    SampleVoyages.NEW_YORK_TO_DALLAS,
+                                                    locationRepository.find(
+                                                            SampleLocations.NEWYORK.getUnLocode()),
+                                                    locationRepository.find(
+                                                            SampleLocations.DALLAS.getUnLocode()),
+                                                    LocalDateTime.now(),
+                                                    LocalDateTime.now()),
+                                            new Leg(
+                                                    SampleVoyages.DALLAS_TO_HELSINKI,
+                                                    locationRepository.find(
+                                                            SampleLocations.DALLAS.getUnLocode()),
+                                                    locationRepository.find(
+                                                            SampleLocations.HELSINKI.getUnLocode()),
+                                                    LocalDateTime.now(),
+                                                    LocalDateTime.now())));
 
-        cargo.assignToRoute(newItinerary);
+                    cargo.assignToRoute(newItinerary);
 
-        cargoRepository.store(cargo);
-        commitTransaction();
+                    cargoRepository.store(cargo);
+                    this.entityManager.flush();
 
-        // verify in the new tx
-        startTransaction();
+                    // verify in the new tx
 
-        assertLegCount(trackingId, 2);
-        // assertThat(jdbcTemplate.queryForObject("select count(*) from Leg where cargo_id = ?", new
-        // Object[]{cargoId}, Integer.class).intValue()).isEqualTo(1);
-        commitTransaction();
+                    assertLegCount(trackingId, 2);
+                    // assertThat(jdbcTemplate.queryForObject("select count(*) from Leg where
+                    // cargo_id = ?", new
+                    // Object[]{cargoId}, Integer.class).intValue()).isEqualTo(1);
+                });
     }
 
     private void assertLegCount(TrackingId trackingId, int expected) {
@@ -367,14 +391,4 @@ public class CargoRepositoryTest {
     //        LOGGER.log(Level.INFO, "leg count: {0}", count);
     //        assertThat((count.toString())).isEqualTo(String.valueOf(expected));
     //    }
-
-    private Long getLongId(Object o) {
-        try {
-            Field id = o.getClass().getDeclaredField("id");
-            id.setAccessible(true);
-            return (Long) id.get(o);
-        } catch (Exception e) {
-            throw new RuntimeException();
-        }
-    }
 }
